resources/style.css
body{
  font-size: 11px;
  font-family: tahoma; 
  background: #F7F7F7;
  margin: 0px;
 }

.columns{
    background: #f2f0f1;
}

.columnpost{
  float: left;
  padding: 20px;
}

.main{
  background-color: #FEFEFE;
  border-radius: 7px;
  width: 270px;
  /*padding: 15px;*/
  margin-bottom: 40px;
  font-size: 11px;
  font-family: tahoma;
  text-align: left;
  box-shadow: 0 0 10px rgba(0,0,0,0.3);
}

.mainimg{
  border-top-left-radius: 7px;
  border-top-right-radius: 7px;
  max-height: 350px;
  margin-bottom: 1px;
  margin-right: 1px;
  cursor: pointer;
}

.textBlock, .textBlockClicked{
  overflow: hidden;
  word-wrap: break-word;
  white-space: pre-wrap;
  font-size: 12px;
  padding: 7px 10px 5px 10px;
}

.textBlockClicked:hover{
  background: #F5FAFD; /* #e1e7ed; */
  cursor: pointer;
}



/** ---------- Footer----------------------- **/

.footer{
  padding: 5px 8px 7px 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.date{
  color: #999999;
  display: inline-block;
  line-height: 18px;
  vertical-align: middle;
  font-size: 9.5px;
  width: 70px;
  overflow: hidden;
  text-align: left;
}

.likes{
  float: right;
  padding-left: 13px;
  background: url("/resources/black2.jpg") 0px 50% no-repeat;
  line-height: 18px;
  vertical-align: middle;
  color: #999999;
  white-space: nowrap;
}


.postbutton{
  color: #888888;
  margin-right: 5px;
  font-size: 9.5px;
  cursor: pointer;
  vertical-align: middle;
  /*font-weight: bold;*/
}
.postbutton:hover{
  text-decoration: underline;
}
.postbutton:active{
  text-decoration: none;
}




.popupdiv{
  position: absolute;
  top: 100px;
  left: 100px;
  width: 200px;
  height: 200px;
  opacity: 0.8;
  background-color: black;
  z-index: 1000;
}

div.groups{
  margin-bottom: 5px;
  background: white;
  border-bottom: 2px solid #D9E0E7;
  padding: 5px;
  padding-bottom: 10px;
  text-align: center;
}


img.group_checked{
   /*border: 1px solid  /* #2B587A; */
   background: white;
   border: 2px solid #A9BACB;
   border-radius: 5px;
   padding: 4px;
   margin: 1px;
   width: 40px;
   height: 40px;
   display: inline-block;
   vertical-align: middle;
}
img.groupimg{
  /*filter: greyscale(100%) opacity(50%);
  -webkit-filter: grayscale(100%) opacity(50%);
  -moz-filter: grayscale(100%) opacity(50%);
  -ms-filter: grayscale(100%) opacity(50%);
  -o-filter: grayscale(100%) opacity(50%);*/

  border: 2px solid #FFFFFF;
  padding: 4px;
  margin: 1px;
  width: 40px;
  height: 40px;
  background-color: #FEFEFE; 
  cursor: pointer;
   display: inline-block;
   vertical-align: middle;
}
img.groupimg:hover{
  /*filter: greyscale(0%) opacity(100%);
  -webkit-filter: grayscale(0%) opacity(100%);
  -moz-filter: grayscale(0%) opacity(100%);
  -ms-filter: grayscale(0%) opacity(100%);
  -o-filter: grayscale(0%) opacity(100%);*/
 display: inline-block;
  vertical-align: middle;
  border: 2px solid #e1e7ed;
  border-radius: 5px;
  padding: 4px;
  margin: 1px;
  width: 40px;
  height: 40px;
}





/* Audio style */
a.song {
  width: 230px;
  white-space: nowrap;
  /*color: #4a6283;*/
  color: #555;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 23px;
  position: relative;
}
a.song:before{
  content: '';
  border-style: solid;
  border-width: 4px 0 4px 7px;
  border-color: transparent transparent transparent #777777;
  position: absolute;
  left: 10px;
  top: 5px;
}
a.song:hover{
  text-decoration: underline;
  cursor: pointer;
}

a.song:active{
  color: #555555;
}





/* CSS toggle only version */
.main-toggle{
  padding: 5px;
  padding-top: 10px;
  background: white;
  text-align: center;
}

.toggle-btn{
    display:inline-block; 
    cursor:pointer;

    margin-bottom: 1px;
    margin-right: 1px;
    padding: 8px 0px; 
    width: 99px;

    border-radius: 5px;
    /*border:solid 1px #FFFFFF;*/

    font-size: 12;
    font-family: Tahoma; 
    text-transform: uppercase;
    text-align: center; 
    font-weight: normal;

}

div.toggle-btn-normal{
  /*color:#45688E; */
  color: #333333;
  /*background-color:#F5F5F5; */
  /*background-image: linear-gradient(#5ba1f7, #1277f3);*/
}

div.toggle-btn-normal:hover {
   /* background-image: linear-gradient(#f7635b, #f31e12);*/
   /*background-image: linear-gradient(#63d5db, #2dbdc4);*/
   /*color: white;*/
   /*font-weight: bold;*/
   /* background: #e1e7ed;*/
   background: #f5f5f5;
}

div.toggle-btn-checked{
    /*background-image: linear-gradient(#f7635b, #f31e12);*/
    background-image: linear-gradient(#DB6963, #C4352D);
    color: white; 
    font-weight: bold;
    /*background: #45688E;*/
}



/* window */
.win_black{
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background: #DDDDDD;
  z-index: 1000;
  opacity: 0.5;
}



.win_container{
    position: fixed;
    width: 100%;
    text-align: center;
    z-index: 1001;
}

.win{
  text-align: left;
  vertical-align: middle;
  display: inline-block;
  background: white;
  box-shadow: 0 0 7px rgba(0,0,0,0.5);
  z-index: 1002;
  padding: 10px;
  /*min-width: 200px;
  max-height: 400px;*/
  border-radius: 7px;
  /*position: relative;*/
}
.win_img{
  min-width: 200px;
  max-height: 500px;
  border-radius: 7px;
}
.post_window_p{
  text-align: right;
  margin: 3px 0px 10px;
}
a.close{
  display: block;
  color: #4a6283;
  /*position: absolute;
  right: 10px;
  top: 10px;*/
}
a.close:hover{
  text-decoration: underline;
  cursor: pointer;
}
a.close:active{
  color: #999999;
}



.window_friend{
  text-align: left;
  vertical-align: middle;
  display: inline-block;
  background: white;
  box-shadow: 0 0 10px rgba(0,0,0,0.5);
  z-index: 1003;
  padding: 10px;
  border-radius: 7px;
}

.friend_container{
  display: inline-block;
  max-height: 505px;
  overflow-y: scroll;
}

.friend_item{
  display: block;
  cursor: pointer;
  padding: 4px 5px;
  height: 38px;
  width: 220px;
}

.friend_item:hover{
  background: #edf1f5;
}

.friend_img{
  float: left;
  width: 38px;
  height: 38px;
  border-radius: 7px;
}

.friend_text{
  color: #4a6283;
  line-height: 38px;
  padding-left: 10px;
  display: block;
  float: left;
  font-weight: bold;
  width: 150px;
  white-space: nowrap;
  overflow: hidden;
}

